sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:12: error: ';' expected but ')' found.
        ecart=11)}
                ^